added quiery 500px start

--- a/css/index.css
+++ b/css/index.css
@@ -138,6 +138,7 @@
 
 /*  Media Queries  */
 
+/*   800 pxels   */
 @media(max-width: 800px){
     .innovationTitle{
         font-size: 20px;
@@ -159,4 +160,9 @@
     .mid h2{
         text-align: center;
     }
+}
+
+/*   800 pxels   */
+@media(max-width: 500px){
+    
 }
