--- a/css/index.css
+++ b/css/index.css
@@ -4,27 +4,36 @@
 *{
 	max-width: 100%;
     box-sizing: border-box;
-    border: 1px solid red;
+    /*border: 1px solid red;*/
+    text-decoration: none;
+}
+html, body {
+    height: 100%;
+    font-family: 'Titillium Web', sans-serif;
+}
+
+h1, h2, h3, h4, h5 {
+    font-family: 'Bangers', cursive;
+    letter-spacing: 1px;
+    margin-bottom: 15px;
 }
 .mainContainerBox{
-	margin: 1% 20% 5% 20%;
-	/*border: 1px solid red;*/
+	margin: 1% 18% 5% 18%;
 	padding: 20px;
 }
 
 
 /* header menu with logo */
-.nav{
-	height: 50px;
-	display: flex;
-	justify-content: space-between;
-	align-content: center;
+header{
+    /*border: 5px solid blue;*/
+	height: 6vh;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
 }
-.nav a{
-	color: gray;
-	text-decoration: none;
+nav a{
+    color: gray;
 }
-
 
 /*  Header box  innovation on demad */
 
@@ -34,11 +43,14 @@
 	align-items: center;
 }
 .innovationTitle{
-	font-size: 40px;
+    font-size: 40px;
+    text-align: center;
 }
 .getStarted{
-	font-size: 15px;
-	margin-top: 60px;
+    font-size: 15px;
+    width: 50%;
+    margin-top: 30px;
+    margin-left: 83px;
 	border: 1px solid gray;
 	border-radius: 3px;
 	text-align: center;
@@ -51,7 +63,7 @@
 	justify-content: space-between;
 }
 .bottomBox{
-	height: 140px;
+	height: 27vh;
 	width: 47%;
 }
 
@@ -62,10 +74,10 @@
 /*   Bottom copy   */
 .bottom{
 	display: flex;
-	margin-top: 20px;
+	margin-top: 1vh;
 }
 .bottomBoxLast{
-	height: 170px;
+	height: 35vh;
 	width: 32%;
 }
 
@@ -136,33 +148,74 @@
 	height: 50px;
 }
 
+
 /*  Media Queries  */
 
 /*   800 pxels   */
 @media(max-width: 800px){
-    .innovationTitle{
-        font-size: 20px;
+    header{
+        /*border: 2px solid blue;*/
+        height: 10vh;
+        flex-direction: column-reverse;
+    }
+    header nav{
+        display: flex;
+        width: 100%;
+        justify-content: space-between
+    }
+    .codeImage{
+        display: none;
     }
     .mid{
-        height: 40vh;
-        justify-content: space-between;
+        height: 34vh;
     }
     .bottom{
-        display: flex;
-        margin-top: 20px;
-        flex-direction: column;
+        height: 47vh;
     }
-    .bottomBoxLast{
-        height: 170px;
-        width: 100%;
-        text-align: center;
-    }
-    .mid h2{
-        text-align: center;
+    .contact{
+        margin-top: 3vh;
     }
 }
 
-/*   800 pxels   */
+/*   500 pxels   */
 @media(max-width: 500px){
-    
+    header{
+        height: 33vh;
+        flex-direction: column-reverse;
+        justify-content: flex-end;
+    }
+    header nav{
+        font-size: 20px;
+        text-align: center;
+        width: 100%;
+        display: flex;
+        justify-content: space-evenly;
+        flex-direction: column;
+    }
+    nav a{
+        border-bottom: 1px solid gray;
+    }
+    nav{
+        border-top: 1px solid gray;
+    }
+    .innovationTitle{
+        font-size: 30px;
+        margin-left: 0;
+    }
+    .mid{
+        flex-direction: column;
+        height: 62vh;
+    }
+    .bottomBox{
+        width: 100%;
+        height: 44vh;
+    }
+    .bottom{
+        flex-direction: column;
+        height: 90vh;
+    }
+    .bottomBoxLast{
+        width: 100%;
+        height: 80vh;
+    }
 }
